# GoodGameBoobaJokes

./: .env  Cargo.toml  README.md
src/: main.rs
src/api_client/: mod.rs
src/img/: mod.rs
src/utils/: mod.rs
txt/: anime.txt  imgs.txt  pron.txt
