[package]
name = "GoodGameBoobaJokes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.3.1"
env_logger = "0.10.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["json", "multipart", "blocking"] }
tokio = { version = "1.25.0", features = ["full"] }
dotenv = "0.15.0"
bytes = "1.4.0"
clap = { version = "4.3.11", features = ["derive"] }
rand = "0.8.5"
tokio-tungstenite = {version = "0.19.0", features = ["native-tls"]}
futures = "0.3.28"
image = "0.24.6"
